[gd_scene load_steps=31 format=3 uid="uid://bes61qn8rf433"]

[ext_resource type="Texture2D" uid="uid://drvi8bc3461te" path="res://assets/items/wooden-house.png" id="1_3e0mf"]
[ext_resource type="Script" path="res://tree_house/tree_house.gd" id="2_72oet"]
[ext_resource type="Script" path="res://checkpoint/checkpoint.gd" id="2_s1p6t"]
[ext_resource type="Texture2D" uid="uid://dblncg8maj7lk" path="res://assets/items/checkpoint.png" id="3_bbeyj"]
[ext_resource type="Texture2D" uid="uid://cjedvdh5eyyl7" path="res://assets/props/tree.png" id="4_5x1wi"]
[ext_resource type="Texture2D" uid="uid://dexv7ax60gs4w" path="res://assets/props/rock.png" id="5_c8qvv"]
[ext_resource type="Texture2D" uid="uid://cvufr6ivxgdmh" path="res://assets/props/wooden-house-door.png" id="5_v87c1"]
[ext_resource type="Texture2D" uid="uid://c1qjvp7rxhgxw" path="res://assets/props/shrooms.png" id="6_bolig"]
[ext_resource type="AudioStream" uid="uid://h3idwseqpyid" path="res://assets/sound/earth-rumble-8s.ogg" id="6_ocw1f"]
[ext_resource type="AudioStream" uid="uid://1mfao2c7m8rh" path="res://assets/sound/game_complete.mp3" id="7_n36a0"]
[ext_resource type="Texture2D" uid="uid://blypy7d0g8mh3" path="res://assets/props/bush.png" id="7_pgqst"]

[sub_resource type="Animation" id="Animation_wyfvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_p4vse"]
resource_name = "appear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_alcjt"]
resource_name = "flag_flap"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qev04"]
resource_name = "flag_open"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o031d"]
_data = {
"RESET": SubResource("Animation_wyfvx"),
"appear": SubResource("Animation_p4vse"),
"flag_flap": SubResource("Animation_alcjt"),
"flag_open": SubResource("Animation_qev04")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_02ic1"]
animation = &"appear"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l10k4"]
animation = &"flag_flap"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ssf2e"]
animation = &"flag_open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vmdqf"]
advance_mode = 2
advance_condition = &"on_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ph85"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ea5a1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_h4cd6"]
states/appear/node = SubResource("AnimationNodeAnimation_02ic1")
states/appear/position = Vector2(350, 107)
states/flag_flap/node = SubResource("AnimationNodeAnimation_l10k4")
states/flag_flap/position = Vector2(729, 136)
states/flag_open/node = SubResource("AnimationNodeAnimation_ssf2e")
states/flag_open/position = Vector2(535, 81)
transitions = ["Start", "appear", SubResource("AnimationNodeStateMachineTransition_vmdqf"), "flag_open", "flag_flap", SubResource("AnimationNodeStateMachineTransition_2ph85"), "appear", "flag_open", SubResource("AnimationNodeStateMachineTransition_ea5a1")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsnoo"]
size = Vector2(8, 108.531)

[sub_resource type="Animation" id="Animation_u1pwu"]
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Props/Tree:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Props/Mushroom:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Props/Rock:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Props/Bush:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fq3ki"]
resource_name = "house_reveal"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9900, 55), Vector2(9900, -65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Props/Tree:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9785, 65), Vector2(9785, -70)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Props/Mushroom:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9836, 21), Vector2(9836, -23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Props/Rock:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9963, 36), Vector2(9963, -23)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Props/Bush:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9831, 35), Vector2(9831, -30)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Props/Tree:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4, 3.6, 4.4, 5.4, 6.2, 6.8, 7.6, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.635294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.635294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.635294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.635294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.635294), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.7, 2.1, 2.5, 2.9, 3.3, 3.7, 4.1, 4.5, 5, 5.4, 5.8, 6.2, 6.6, 7, 7.2, 7.4, 7.6, 7.8, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Props/Mushroom:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 2, 2.6, 3.1, 3.7, 4.3, 4.9, 5.6, 6.3, 7, 7.4, 7.7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.545098), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Props/Rock:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6.1, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.631373), Color(1, 1, 1, 1), Color(1, 1, 1, 0.631373), Color(1, 1, 1, 1), Color(1, 1, 1, 0.631373), Color(1, 1, 1, 1), Color(1, 1, 1, 0.631373), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Props/Bush:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1.1, 1.7, 2, 2.6, 2.9, 3.6, 3.9, 4.6, 4.9, 5.6, 5.9, 6.6, 6.9, 7.5, 7.8, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jal8k"]
_data = {
"RESET": SubResource("Animation_u1pwu"),
"house_reveal": SubResource("Animation_fq3ki")
}

[sub_resource type="Animation" id="Animation_yw8tq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gwdfp"]
resource_name = "door"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.537255, 0.498039, 0.854902, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4g27"]
_data = {
"RESET": SubResource("Animation_yw8tq"),
"door": SubResource("Animation_gwdfp")
}

[node name="TreeHouse" type="Sprite2D"]
z_index = -4
position = Vector2(9900, 55)
texture = ExtResource("1_3e0mf")
script = ExtResource("2_72oet")

[node name="Checkpoint" type="Area2D" parent="."]
position = Vector2(-39, 49)
collision_layer = 0
collision_mask = 2
script = ExtResource("2_s1p6t")

[node name="Sprite2D" type="Sprite2D" parent="Checkpoint"]
visible = false
position = Vector2(13, -32)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_bbeyj")
hframes = 26
vframes = 3
frame = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="Checkpoint"]
libraries = {
"": SubResource("AnimationLibrary_o031d")
}

[node name="AnimationTree" type="AnimationTree" parent="Checkpoint"]
libraries = {
"": SubResource("AnimationLibrary_o031d")
}
tree_root = SubResource("AnimationNodeStateMachine_h4cd6")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/on_trigger = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint"]
position = Vector2(26, -2.46875)
shape = SubResource("RectangleShape2D_vsnoo")

[node name="Sound" type="AudioStreamPlayer2D" parent="Checkpoint"]

[node name="FlagArrival" type="Timer" parent="Checkpoint"]
one_shot = true

[node name="door" type="Sprite2D" parent="."]
position = Vector2(-11, 23)
texture = ExtResource("5_v87c1")

[node name="EarthRumbleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ocw1f")

[node name="GameCompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_n36a0")

[node name="HouseAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jal8k")
}
autoplay = "house_flashing"

[node name="Props" type="Node" parent="."]

[node name="Tree" type="Sprite2D" parent="Props"]
z_index = -2
position = Vector2(9785, 65)
texture = ExtResource("4_5x1wi")

[node name="Mushroom" type="Sprite2D" parent="Props"]
z_index = -1
position = Vector2(9836, 21)
texture = ExtResource("6_bolig")

[node name="Rock" type="Sprite2D" parent="Props"]
z_index = -2
position = Vector2(9963, 36)
texture = ExtResource("5_c8qvv")

[node name="Bush" type="Sprite2D" parent="Props"]
modulate = Color(0.717647, 0.901961, 0.592157, 1)
z_index = -2
position = Vector2(9831, 35)
texture = ExtResource("7_pgqst")

[node name="DoorAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w4g27")
}

[connection signal="area_entered" from="Checkpoint" to="Checkpoint" method="_on_area_entered"]
[connection signal="timeout" from="Checkpoint/FlagArrival" to="Checkpoint" method="_on_flag_arrival_timeout"]
[connection signal="finished" from="EarthRumbleSound" to="." method="_on_earth_rumble_sound_finished"]
[connection signal="finished" from="GameCompleteSound" to="." method="_on_game_complete_sound_finished"]
